committing my jekyll theme

--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ title       : YouTube Geofind
 subtitle    : Discover Geo-tagged Videos
 author      : mattwright324
 copyright   : 2021
-home        : https://mattw.io/
-github      : https://github.com/mattwright324/
-github_repo : https://github.com/mattwright324/youtube-geofind/
-gh_pages    : https://mattw.io/youtube-geofind/
+home        : https://conork360.io/
+github      : https://github.com/conork360/
+github_repo : https://github.com/conork360/mynewsite/
+gh_pages    : https://conork360.github.io/mynewsite/
 url: https://conork360.github.io
 baseurl: /mynewsite
